--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "eslint": "^9.10.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.3",
     "nodemon": "^3.1.4",
     "supertest": "^7.0.0"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "mongoose": "^8.8.2",
     "prompt-sync": "^4.2.0",
     "uuid": "^10.0.0"
   }
