--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "bookmanagementsystem",
+  "name": "moviemanagementsystem",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "test": "jest --coverage"
+    "test": "NODE_ENV=test jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -25,9 +25,11 @@
     "supertest": "^7.0.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.21.1",
-    "mongoose": "^8.8.2",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-jsonschema": "^1.1.6",
+    "js-yaml": "^4.1.0",
+    "mongoose": "^8.12.0",
     "prompt-sync": "^4.2.0",
     "uuid": "^10.0.0"
   }
