--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -122,18 +122,22 @@ jobs:
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
-          key: ${{ secrets.VPS_SSH_KEY }}
+          password: ${{ secrets.VPS_PASSWORD }}
           port: ${{ secrets.VPS_PORT }}
           source: "deploy/*"
           target: "/home/${{ secrets.VPS_USERNAME }}/movie-management-api"
           strip_components: 1
+          timeout: 60s
+          command_timeout: 10m
 
       - name: Deploy to VPS via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
-          key: ${{ secrets.VPS_SSH_KEY }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          timeout: 60s
+          command_timeout: 30m
           port: ${{ secrets.VPS_PORT }}
           script: |
             cd /home/${{ secrets.VPS_USERNAME }}/movie-management-api
@@ -194,7 +198,9 @@ jobs:
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
-          key: ${{ secrets.VPS_SSH_KEY }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          timeout: 60s
+          command_timeout: 10m
           port: ${{ secrets.VPS_PORT }}
           script: |
             cd /home/${{ secrets.VPS_USERNAME }}/movie-management-api
