feat(nginx): adicionar proxy reverso Nginx para segurança
- Porta 5000 não exposta externamente (apenas via Nginx)
- Porta 27017 MongoDB removida (acesso apenas interno)
- Nginx expõe apenas porta 80 (HTTP) e 443 (HTTPS)
- Rate limiting: 10 req/s com burst de 20
- CORS configurado
- Logs e compressão gzip habilitados
- Preparado para SSL/TLS (Let's Encrypt)
- Health check endpoint em /health

Segurança melhorada: apenas Nginx está exposto publicamente

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -116,6 +116,7 @@ jobs:
           mkdir -p deploy
           cp docker-compose.prod.yml deploy/docker-compose.yml
           cp .env.example deploy/.env.example
+          cp -r nginx deploy/nginx
 
       - name: Copy files to VPS
         uses: appleboy/scp-action@v0.1.7
