--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -3,18 +3,16 @@ services:
     image: ${DOCKER_IMAGE:-jamescosjr/movie-management-api}:latest
     container_name: movie-api
     restart: unless-stopped
-    ports:
-      - "${PORT:-3000}:3000"
     environment:
       - NODE_ENV=production
-      - PORT=${PORT:-3000}
+      - PORT=${PORT:-5000}
       - MONGODB_URI=${MONGODB_URI}
     networks:
       - app-network
     depends_on:
       - mongodb
     healthcheck:
-      test: ["CMD", "node", "-e", "require('http').get('http://localhost:3000/wakeup', (r) => {process.exit(r.statusCode === 200 ? 0 : 1)})"]
+      test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:5000/movies"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -29,8 +27,6 @@ services:
     image: mongo:8
     container_name: movie-mongodb
     restart: unless-stopped
-    ports:
-      - "27017:27017"
     environment:
       - MONGO_INITDB_DATABASE=moviesDB
     volumes:
@@ -44,6 +40,26 @@ services:
       timeout: 10s
       retries: 5
       start_period: 40s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  nginx:
+    image: nginx:alpine
+    container_name: movie-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/ssl:/etc/nginx/ssl:ro
+    networks:
+      - app-network
+    depends_on:
+      - app
     logging:
       driver: "json-file"
       options:
